--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark" id="navSmall" style="z-index: 5;">
   <a class="navbar-brand" href="index.html">
-      <img src="../assets/icons/Layer 0.png"id="navYalla">
+      <img src="./assets/icons/Layer 0.png"id="navYalla">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
