--- a/src/fortnite.html
+++ b/src/fortnite.html
@@ -49,70 +49,31 @@
     <div class="container-fluid">
 
 <!-- Just an image -->
-<div class="topBar"  style="background:url(../assets/imgs/Texture.png); ">
+<div class="topBar">
     <div class="sponsorsBar">
 <a href="https://rog.asus.com/" target="_blank"><img src="assets/icons/ROG LOGO_GLOBAL-white-06.png" class="sponsorIcon"></a>
 <a href="https://www.wdc.com/" target="_blank"><img src="assets/icons/WD SSD_Logo LockUp_White.png" class="sponsorIcon"></a>
-<a href="https://www.logitechg.com/" target="_blank"><img src="assets/icons/logitech.png" class="sponsorIcon"></a>    </div>
+<a href="https://www.logitechg.com/" target="_blank"><img src="assets/icons/logitech.png" class="sponsorIcon"></a>
+    </div>
 <div class="topLogo">
       <a href="index.html">  <img src="assets/icons/Icon.png" class="yallaIcon"> </a>
 </div>
        
 
-<nav class="navbar navbar-expand-lg navbar-dark" id="navSmall" style="z-index: 5;">
-    <a class="navbar-brand" href="index.html">
-        <img src="./assets/icons/Layer 0.png"id="navYalla">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto" id="navSpace">
-          <!--Navigation-->
-          <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-        </li>
-  
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" >Teams</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="hs.html">Hearthstone</a>
-                    <a class="dropdown-item" href="cod.html">Call Of Duty</a>
-                    <a class="dropdown-item" href="r6.html">Rainbow 6</a>
-                    <a class="dropdown-item" href="fgc.html">Fighting Games</a>
-                    <a class="dropdown-item" href="fortnite.html">Fortnite</a>
-                    <a class="dropdown-item" href="streamTeam.html">Stream Team</a>
-                </div>
-            </li>
-  
-            <li class="nav-item">
-                    <a class="nav-link" href="News.html">News</a>
-            </li>
-                    <li class="nav-item" style="cursor: pointer;">
-                      <a class="nav-link" href="https://yldr.gg/shop/yalla/ " target="_blank">Store</a>
-  
-                                                       
-  
-                    </li>
-  
-  
-            <li class="nav-item">
-                    <a class="nav-link" href="Partners.html">Partners</a>
-            </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="careers.html">Careers</a>
-            </li>          
-            <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-        </ul>
-    </div>
-  </nav>
+<div class="socialBar">
+      <a href="https://twitter.com/yallaesports" target="_blank" > <i class="fab fa-twitter barIcon" ></i> </a>  
+      <a href="https://www.facebook.com/YallaEsports/" target="_blank">  <i class="fab fa-facebook-f barIcon"></i></a>
+      <a href="https://www.instagram.com/yallaesports" target="_blank"><i class="fab fa-instagram barIcon"></i></a> 
+      <a href="https://www.twitch.tv/yallaesports" target="_blank"><i class="fab fa-twitch barIcon"></i></a>
+      <a href="https://www.youtube.com/channel/UCImQSWoM9-AmfGXp6XRY9kw" target="_blank"><i class="fab fa-youtube barIcon"></i></a>
+      <a href="https://discord.gg/Y3d4xAv" target="_blank"><i class="fab fa-discord barIcon"></i></a>
+
+
+</div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark" id="navSmall" style="z-index: 5;">
-  <a class="navbar-brand" href="../index.html">
-      <img src="../assets/icons/Layer 0.png"id="navYalla">
+  <a class="navbar-brand" href="index.html">
+      <img src="./assets/icons/Layer 0.png"id="navYalla">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
@@ -122,23 +83,23 @@
       <ul class="navbar-nav ml-auto" id="navSpace">
         <!--Navigation-->
         <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
       </li>
 
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" >Teams</a>
               <div class="dropdown-menu">
-                  <a class="dropdown-item" href="../hs.html">Hearthstone</a>
-                  <a class="dropdown-item" href="../cod.html">Call Of Duty</a>
-                  <a class="dropdown-item" href="../r6.html">Rainbow 6</a>
-                  <a class="dropdown-item" href="../fgc.html">Fighting Games</a>
-                  <a class="dropdown-item" href="../fortnite.html">Fortnite</a>
+                  <a class="dropdown-item" href="hs.html">Hearthstone</a>
+                  <a class="dropdown-item" href="cod.html">Call Of Duty</a>
+                  <a class="dropdown-item" href="r6.html">Rainbow 6</a>
+                  <a class="dropdown-item" href="fgc.html">Fighting Games</a>
+                  <a class="dropdown-item" href="fortnite.html">Fortnite</a>
                   <a class="dropdown-item" href="streamTeam.html">Stream Team</a>
               </div>
           </li>
 
           <li class="nav-item">
-                  <a class="nav-link" href="../News.html">News</a>
+                  <a class="nav-link" href="News.html">News</a>
           </li>
                   <li class="nav-item" style="cursor: pointer;">
                     <a class="nav-link" href="https://yldr.gg/shop/yalla/ " target="_blank">Store</a>
@@ -149,13 +110,13 @@
 
 
           <li class="nav-item">
-                  <a class="nav-link" href="../Partners.html">Partners</a>
+                  <a class="nav-link" href="Partners.html">Partners</a>
           </li>
           <li class="nav-item">
-                  <a class="nav-link" href="../careers.html">Careers</a>
+                  <a class="nav-link" href="careers.html">Careers</a>
           </li>          
           <li class="nav-item">
-                  <a class="nav-link" href="../contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
       </ul>
   </div>
