--- a/src/careers.html
+++ b/src/careers.html
@@ -48,12 +48,12 @@
 <!-- Just an image -->
 <div class="topBar" style="background:url(../assets/imgs/Texture.png); ">
     <div class="sponsorsBar">
-<a href="https://rog.asus.com/" target="_blank"><img src="/assets/icons/ROG LOGO_GLOBAL-white-06.png" class="sponsorIcon"></a>
-<a href="https://www.wdc.com/" target="_blank"><img src="/assets/icons/WD SSD_Logo LockUp_White.png" class="sponsorIcon"></a>
-<a href="https://www.logitechg.com/" target="_blank"><img src="/assets/icons/logitech.png" class="sponsorIcon"></a>            </div>
+<a href="https://rog.asus.com/" target="_blank"><img src="assets/icons/ROG LOGO_GLOBAL-white-06.png" class="sponsorIcon"></a>
+<a href="https://www.wdc.com/" target="_blank"><img src="assets/icons/WD SSD_Logo LockUp_White.png" class="sponsorIcon"></a>
+<a href="https://www.logitechg.com/" target="_blank"><img src="assets/icons/logitech.png" class="sponsorIcon"></a>            </div>
 
     <div class="topLogo">
-        <a href="../index.html">  <img src="/assets/icons/Icon.png" class="yallaIcon"> </a>
+        <a href="../index.html">  <img src="assets/icons/Icon.png" class="yallaIcon"> </a>
   </div>
        
 
