Fixes with news page, navigation and images

--- a/src/News.html
+++ b/src/News.html
@@ -312,9 +312,9 @@
             </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/popper.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script>
     // When the user scrolls the page, execute myFunction 
             window.onscroll = function() {myFunction()};
