--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
             </div>
 
             <div class="teamCard">
-                    <a href="../fgc.html">
+                    <a href="fgc.html">
                     <div id="dbzCard"></div>
                     <div id="view">
                             <div>View Fighters</div>
